# GroundRecall

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: AGENTIC_OS.md  README.md  ai-knowledge-graph-adoption-plan.md  architecture.md  assistant-protocol.md  citegeist-okf-import.md  didactopus-bridge.md  doclift-claim-tournament.md  evidence-docket-claims-analysis.md  geniehive-foundation-gateway.md  knowledge-graph-roadmap.md  library-argument-ingestion.md  llmwiki-import.md  quickstart.md  reasoning-scaffold-operational-principles.md  search-responsiveness.md  sync-roadmap.md  textbook-ocr-ingestion.md
docs/legacy/: groundrecall-assistant-architecture.md  groundrecall-ingestion-refactor.md  groundrecall-llmwiki-import.md  groundrecall-migration-plan.md  groundrecall-repo-bootstrap.md
src/groundrecall/: __init__.py  artifact_schemas.py  assistant_export.py  citation_support.py  claim_evaluation_export.py  cli.py  concept_alignment.py  doclift_claim_tournament.py  export.py  lint.py  (+33 more)
tests/: test_claim_evaluation_export.py  test_console_script.py  test_doclift_claim_tournament.py  test_epistemap_adapter.py  test_export_guardrails.py  test_graph_augment.py  test_groundrecall_assistants.py  test_groundrecall_export.py  test_groundrecall_import.py  test_groundrecall_namespace.py  test_groundrecall_promotion.py  test_groundrecall_protocol.py  test_groundrecall_query.py  test_groundrecall_review_server.py  test_groundrecall_review_workspace.py  test_groundrecall_source_adapters.py  test_groundrecall_store.py  test_mcp.py  test_relation_review.py  test_search_index.py
(+61 files in other folders)
